2012-06-03  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: bug fix: Fixed mmg's excessive CPU usage during muxing.

2012-06-01  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Reading DTS from AVI files often resulted in
	the error message that DTS headers could not be found in the first
	frames. This has been fixed. Fixes issue 759.

2012-05-31  Moritz Bunkus  <moritz@bunkus.org>

	* Documentation: Updated the cross-compilation guide and fixed the
	"setup_cross_compilation_env.sh" script.

2012-05-27  Moritz Bunkus  <moritz@bunkus.org>

	* Released v5.6.0.

	* documentation: Added Spanish translation of mmg's guide by
	Israel Lucas Torrijos (see AUTHORS).

2012-05-20  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: SRT subtitle entries with colons as the
	decimal separator are accepted. Fix for issue 754.

2012-05-13  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: XML tag files with <Simple> tags that only
	contained a name and nested <Simple> were wrongfully rejected as
	invalid. Fixes issue 752.

	* mkvmerge: enhancement: mkvmerge was optimized to keep cluster
	time codes strictly increasing in most situations.

2012-04-24  Moritz Bunkus  <moritz@bunkus.org>

	* all: Added a translation to Polish by Daniel (see AUTHORS).

2012-04-16  Moritz Bunkus  <moritz@bunkus.org>

	* mkvextract: bug fix: Extraction of AVC/h.264 was completely
	broken after 2012-04-09 resulting in files with a length of 0
	bytes.

2012-04-09  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: new feature: When adding a Matroska file that has either
	the "previous segment UID" or the "next segment UID" set then mmg
	will copy those two and the source file's segment UID into the
	corresponding controls on the "global" tab if they haven't been
	set before. Implements ticket 733.

	* mkvmerge: new feature: The verbose identification mode for
	Matroska files will now includes the "segment UID", the "next
	segment UID" and "previous segment UID" elements.
