@@ -218,7 +218,7 @@ struct qtmp4_demuxer_c {
   void calculate_timecodes();
   void adjust_timecodes(int64_t delta);
 
-  void update_tables(int64_t global_time_scale);
+  bool update_tables(int64_t global_time_scale);
   void update_editlist_table(int64_t global_time_scale);
 
   void build_index();
