@@ -209,3 +209,4 @@ T_360X_chapters_hex_format:c49e086961b3ca8b77f525753d3912cf-3853793b0d88fc10efad
 T_361file_concatenation:4051dcbcddbde799e7f93b4bb3617897-2db61b8b9a6f7bee36ad9d7d260b6858-2db61b8b9a6f7bee36ad9d7d260b6858-cb53c1651de293f1951daec0bdeba51a-cb53c1651de293f1951daec0bdeba51a-cb53c1651de293f1951daec0bdeba51a-245037810fa42e4f7a685a802f68a3d1-0408ae98a65d899f9d62e3f4f44e385b-8bf0ee64b51f3c0cf9ade6666466357e-8bf0ee64b51f3c0cf9ade6666466357e-8bf0ee64b51f3c0cf9ade6666466357e-8bf0ee64b51f3c0cf9ade6666466357e-900d51324a15b56e0fcb0fe37954735f-59cf17f8f14c8cf64beeea497d541d77-f44803b98439b320582ec4bafafe27bf-f44803b98439b320582ec4bafafe27bf:passed:20120406-144928:15.270773675
 T_362xtr_avc:7e80cf1649489adf8f65a7dc8cef7387-ce680f3ae594f3842b638dcb2949e220:passed:20120416-153515:1.533142
 T_363srt_colon_decimal_separator:b911ac82752b41c46e0a8e550f6df0a8:passed:20120520-180625:0.056713461
+T_364qtmp4_track_with_empty_chunkmap_table:525b2e6e666a21e66e31c2e8106e1817:passed:20120605-223925:0.081185075
